--- a/how-to-bypass-dev-channel-requirements-in-windows-insider-program/index.html
+++ b/how-to-bypass-dev-channel-requirements-in-windows-insider-program/index.html
@@ -8,6 +8,12 @@
 <html>
 	<head>
 		<title>Bypass the system requirements for the Windows Insider Program’s Dev Channel | Tech Point</title>
+		    <meta content="Tech Point" property="og:title" />
+    <meta content="Easy ways to bypass the system requirements for the Windows Insider Program’s Dev Channel" property="og:description" />
+    <meta content="https://blogs.techpointch.cf/how-to-bypass-dev-channel-requirements-in-windows-insider-program" property="og:url" />
+    <meta content="https://blogs.techpointch.cf/how-to-bypass-dev-channel-requirements-in-windows-insider-program/images/devchannelbypass_techpoint.jpg" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
